// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modify XML functions askLongString() should return <AskString /> component 1`] = `
<form
  onSubmit={[Function]}
>
  <textarea
    className="textbox focusme"
    name="val"
    onChange={[Function]}
    value="defaultValue"
  />
  <div
    className="submitline"
  >
    <input
      type="submit"
      value="OK"
    />
  </div>
</form>
`;

exports[`Modify XML functions askPicklist() should return <AskPicklist /> component 1`] = `
<div
  className="menu"
>
  <div
    className="menuItem focusme techno"
    onClick={[Function]}
  >
    <span
      className="punc"
    >
      "
    </span>
    short
    <span
      className="punc"
    >
      "
    </span>
    <span
      className="explainer"
    >
      short
    </span>
  </div>
  <div
    className="menuItem focusme techno"
    onClick={[Function]}
  >
    <span
      className="punc"
    >
      "
    </span>
    long
    <span
      className="punc"
    >
      "
    </span>
    <span
      className="explainer"
    >
      long
    </span>
  </div>
</div>
`;

exports[`Modify XML functions askString() should return <AskString /> component 1`] = `
<form
  onSubmit={[Function]}
>
  <input
    className="textbox focusme"
    name="val"
    onChange={[Function]}
    value="defaultValue"
  />
  <input
    type="submit"
    value="OK"
  />
</form>
`;
